--- a/recipe-app/.env
+++ b/recipe-app/.env
@@ -4,3 +4,6 @@ REACT_APP_PROJECTID=recipe-52514
 REACT_APP_STROGE=recipe-52514.appspot.com
 REACT_APP_SENDID=423684065663
 REACT_APP_APPID=1:423684065663:web:b9b635cb70c3a10bc1724a
+REACT_APP_EDAMAMID=50a40f42
+REACT_APP_EDAMAMKEY=d47e89abbd85c5da1197d73c5adaca3e
+
