--- a/firecontact/.env
+++ b/firecontact/.env
@@ -4,3 +4,10 @@ REACT_APP_PROJECTID=firecontact-3253c
 REACT_APP_STORAGE=firecontact-3253c.appspot.com
 REACT_APP_MESSAGING=724980985811
 REACT_APP_APPID=1:724980985811:web:21223ee9c118cb8a3c4926
+
+# REACT_APP_APIKEY=AIzaSyDt-WrWNFmB7vO2qRl0ft6cMho7jSBCjEQ
+# REACT_APP_DOMAIN=firecontactlogin.firebaseapp.com
+# REACT_APP_PROJECTID=firecontactlogin
+# REACT_APP_STORAGE=firecontactlogin.appspot.com
+# REACT_APP_MESSAGING=292499847460
+# REACT_APP_APPID=1:292499847460:web:cb1cf509cc08daee099bb1
